--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "babel-preset-react": "^6.24.1",
     "braces": "^3.0.2",
     "css-loader": "^3.2.0",
+    "express-session": "^1.17.0",
+    "mongoose": "^5.7.7",
+    "morgan": "^1.9.1",
     "react-hot-loader": "^4.12.15",
     "react-router-dom": "^5.1.2",
     "style-loader": "^1.0.0",
